<resources>
    <string name="app_name">NYTimes Search</string>
    <string name="filters_menu_item">Filters</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="sort_spinner_text">Sort</string>
    <string name="btn_filter_text">Save</string>
    <string-array name="sort_array">
        <item>oldest</item>
        <item>newest</item>
    </string-array>
    <string name="initiate_begin_date_picker">Start Date</string>
    <string name="news_desk_checkboxes_label">Section</string>
    <string name="newsdesk_sports_checkbox">Sports</string>
    <string name="newsdesk_health_checkbox">Health</string>
    <string name="newsdesk_business_checkbox">Business</string>
    <string name="filterBeginDateLabel">Start Date</string>
</resources>
