<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lee.nytimessearch.activities.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDateSort"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sort_spinner_text"
        android:id="@+id/tvSpinner"
        android:layout_alignBottom="@+id/spinnerDateSort"
        android:layout_marginBottom="68dp"
        android:layout_alignTop="@+id/spinnerDateSort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_filter_text"
        android:id="@+id/btnSaveFilter"
        android:onClick="onSave"
        android:layout_below="@+id/cbBusiness"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initiate_begin_date_picker"
        android:id="@+id/button"
        android:onClick="showDatePickerDialog"
        android:layout_above="@+id/tvSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/news_desk_checkboxes_label"
        android:id="@+id/textView"
        android:layout_below="@+id/tvSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsdesk_sports_checkbox"
        android:id="@+id/cbSports"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="checkBoxClicked"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsdesk_health_checkbox"
        android:id="@+id/cbHealth"
        android:layout_below="@+id/cbSports"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="checkBoxClicked"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsdesk_business_checkbox"
        android:id="@+id/cbBusiness"
        android:layout_below="@+id/cbHealth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="checkBoxClicked"
        android:checked="false" />

</RelativeLayout>
